2023-03-30.container-and-Kubernetes-security-policy-design/05.monitoring/02.typha-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: typha-metrics-svc
  namespace: calico-system
spec:
  clusterIP: None
  selector:
    k8s-app: calico-typha
  ports:
  - port: 9093
    targetPort: 9093
